--- a/main.tex
+++ b/main.tex
@@ -245,9 +245,9 @@
 \newcommand\isoto{\xrightarrow{\sim}}
 \newcommand\deffunc[5]{\ensuremath{
   \arraycolsep=1pt
-  \begin{array}{rcl}
-    #1: & #2 & \to #3 \\
-       & #4 & \mapsto #5
+  \begin{array}{rccc}
+    #1: & #2 & \to & #3 \\
+       & #4 & \mapsto & #5
   \end{array}
 }}
 
