Fix two small bugs

--- a/fields/week8.tex
+++ b/fields/week8.tex
@@ -226,7 +226,7 @@ And $\trace(T) = -a_{n-1}, \det(T) = (-1)^n a_0$.
 
   \begin{proof}
     ``$\Rightarrow$'': Let $\Gal(L/K) = \langle \sigma \rangle$ with $\ord(\sigma) = p$. Then
-    $\trace_{L/K}(1) = p = 0$. By theorem~\ref{thm-Hilbert-theorem-90},
+    $\trace_{L/K}(1) = p = 0$. By theorem~\ref{thm:Hilbert-theorem-90},
     exists $\alpha$ satisfied $1 = \sigma(\alpha) - \alpha$.
     So $\alpha \not\in K$. Then we have $1 < [K(\alpha): K] \bigm| [L: K] = p$,
     so $[K(\alpha): K] = p \implies K(\alpha) = L$.
@@ -246,7 +246,7 @@ And $\trace(T) = -a_{n-1}, \det(T) = (-1)^n a_0$.
 \end{coro}
 
 \begin{coro}
-  If $x^2 + d y+2 = 1$ where $-d$ is not a square, then $L \triangleq \Qb(\sqrt{-d})$
+  If $x^2 + d y^2 = 1$ where $-d$ is not a square, then $L \triangleq \Qb(\sqrt{-d})$
   is a splitting field of $x^2 + d$ over $\Qb$,
   so $N_{L/\Qb}(a + b \sqrt{-d}) = a^2 + d b^2$. Since $[L: \Qb] = 2$,
   the galois group is obviously cyclic and in fact is $\langle \sigma \rangle$,
