--- a/fields/week1.tex
+++ b/fields/week1.tex
@@ -327,7 +327,7 @@
 
 \begin{coro} \label{coro:num-of-extensions}
   Let $K(\alpha)/K$ be an algebraic extension and $\tau: K \hookrightarrow L$.
-  If $\bar\tau(m_{\alpha, K})$ has $r$ distinc roots in $L$, then there are exactly $r$ extensions of $\tau$.
+  If $\bar\tau(m_{\alpha, K})$ has $r$ distinct roots in $L$, then there are exactly $r$ extensions of $\tau$.
 \end{coro}
 
 \begin{theorem} \label{thm:two-splitting-field-are-isom}
