--- a/fields/week8.tex
+++ b/fields/week8.tex
@@ -306,16 +306,16 @@ And $\trace(T_\alpha) = -a_{n-1}, \det(T_\alpha) = (-1)^n a_0$.
       = f \left(r_1 \sigma_1 \left( \sum_{i = 1}^n \alpha_i \right), \dots,
         r_n \sigma_n \left( \sum_{i = 1}^n \alpha_i \right) \right) \]
     So let
-    \[ g(x_1, \dots, x_n) \triangleq f \left(\sum_i \sigma_1(\alpha_i) x_i,
-      \dots, \sum_i \sigma_n(\alpha_i) x_i \right) \]
-  and write $g(x_1, \dots, x_n) = \sum_j g_j(x_1, \dots, x_n) \alpha_j$.
-  Then $g_j(r_1, \dots, r_n) = 0, \, \forall \bm{r} \in K^n$. The only
-  polynomial which has infinite zeros is the zero polynomial, thus $g_j = 0$ for each $j$.
+    \[ g(x_1, \dots, x_n) \triangleq f \left(\sum_i \sigma_1(\alpha_i) x_1,
+      \dots, \sum_i \sigma_n(\alpha_i) x_n \right) \]
+    and write $g(x_1, \dots, x_n) = \sum_j g_j(x_1, \dots, x_n) \alpha_j$.
+    Then $g_j(r_1, \dots, r_n) = 0, \, \forall \bm{r} \in K^n$. The only
+    polynomial which has infinite zeros is the zero polynomial, thus $g_j = 0$ for each $j$.
 
-  Now, by lemma~\ref{lemma:basis-iff-det-neq-0}, $\det([\sigma_i(\alpha_j)]) \neq 0$.
-  So it is possible to solve $\bm{x} = (x_i)$ satisfied
-  $\bm{y} = (y_j) = \big( \sum_i \sigma_j(\alpha_i) x_i \big)_j$.
-  Thus $g = 0 \implies f = 0$.
+    Now, by lemma~\ref{lemma:basis-iff-det-neq-0}, $\det([\sigma_i(\alpha_j)]) \neq 0$.
+    So it is possible to solve $\bm{x} = (x_i)$ satisfied
+    $\bm{y} = (y_j) = \big( \sum_i \sigma_j(\alpha_i) x_i \big)_j$.
+    Thus $g = 0 \implies f = 0$.
   \end{proof}
 \end{lemma}
 
@@ -342,19 +342,18 @@ And $\trace(T_\alpha) = -a_{n-1}, \det(T_\alpha) = (-1)^n a_0$.
     Case 2: $\abs{K} = \infty$. Let $\Gal(L/K) = \Set{\sigma_1, \dots, \sigma_n}$.
     Define $y_{i, j} = x_k$ so that $\sigma_i \sigma_j = \sigma_{k}$.
     Consider
-  \[
-    f(x_1, \dots, x_n) = \begin{vmatrix}
-      y_{1, 1} & y_{1, 2} & \cdots & y_{1, n} \\
-      \vdots & \ddots & \vdots & \vdots \\
-      y_{n, 1} & y_{n, 2} & \cdots & y_{n, n} \\
-    \end{vmatrix}
-  \]
-  This determinant is a non-zero polynomial in $x_1, x_2, \dots, x_n$.
-  Since if we fix $\sigma_1$, for each $\sigma_i$, exists unique $j$ so that $\sigma_i \sigma_j = \sigma_1$.
-  So the determinant has a $x_1^n$ term and is not zero.
-  Then $f(\sigma_1, \dots, \sigma_n) \neq 0$ by lemma~\ref{lemma:automorphisms-are-alg-indep}.
-  Thus $\det\big([\sigma_{i}\sigma_{j}(\alpha)] \big) = f(\sigma_1, \dots, \sigma_n)(\alpha) \neq 0$.
-  So by lemma~\ref{lemma:basis-iff-det-neq-0}, $\Set{ \sigma_i(\alpha) }$ is a basis.
-
+    \[
+      f(x_1, \dots, x_n) = \begin{vmatrix}
+        y_{1, 1} & y_{1, 2} & \cdots & y_{1, n} \\
+        \vdots & \ddots & \vdots & \vdots \\
+        y_{n, 1} & y_{n, 2} & \cdots & y_{n, n} \\
+      \end{vmatrix}
+    \]
+    This determinant is a non-zero polynomial in $x_1, x_2, \dots, x_n$.
+    Since if we fix $\sigma_1$, for each $\sigma_i$, exists unique $j$ so that $\sigma_i \sigma_j = \sigma_1$.
+    So the determinant has a $x_1^n$ term and is not zero.
+    Then $f(\sigma_1, \dots, \sigma_n) \neq 0$ by lemma~\ref{lemma:automorphisms-are-alg-indep}.
+    Thus $\det\big([\sigma_{i}\sigma_{j}(\alpha)] \big) = f(\sigma_1, \dots, \sigma_n)(\alpha) \neq 0$.
+    So by lemma~\ref{lemma:basis-iff-det-neq-0}, $\Set{ \sigma_i(\alpha) }$ is a basis.
   \end{proof}
 \end{theorem}
