Add Ann and fix two bugs

--- a/main.tex
+++ b/main.tex
@@ -227,6 +227,7 @@
 \DeclareMathOperator{\Der}{Der}
 \DeclareMathOperator{\PDer}{PDer}
 \DeclareMathOperator{\Ext}{Ext}
+\DeclareMathOperator{\Ann}{Ann}
 
 \DeclareMathOperator{\trdeg}{\mathrm{tr} \deg}
 %
