--- a/fields/week8.tex
+++ b/fields/week8.tex
@@ -4,7 +4,7 @@
 \begin{definition}
   Let $L/K$ be an extension and $S \subset L$.
   \begin{itemize}
-    \item $S$ is algebraically dependent over $K$ if for some $n \in \mathbb{N}$,
+    \item $S$ is algebraically dependent over $K$ if for some $n \in \Nb$,
       exists $f(x_1, \dots, x_n) \in K[x_1, \dots, x_n]$ satisfied
       $f(a_1, \dots, a_n) = 0$ for some distinct $a_1, \dots, a_n \in S$.
     \item $S$ is algebraically independent over $K$ if $S$ is not algebraically dependent.
@@ -336,7 +336,7 @@ And $\trace(T_\alpha) = -a_{n-1}, \det(T_\alpha) = (-1)^n a_0$.
     is the minimal polynomial of $\sigma$, thus $d_s(x) = x^n - 1$. But
     the characteristic polynomial of $\sigma$ has degree at most $n$, thus
     $d_1(x) \dotsm d_s(x) = x^n - 1$. So $L \cong K[x] / \gen{x^n - 1}$.
-    Let $\alpha \in L$ such that $ann(\alpha) = \gen{x^n - 1}$, then $L = K[x]\alpha$.
+    Let $\alpha \in L$ such that $\Ann(\alpha) = \gen{x^n - 1}$, then $L = K[x]\alpha$.
     Hence $L = \gen{\alpha, \sigma(\alpha), \dots, \sigma^{n-1}(\alpha)}$.
 
     Case 2: $\abs{K} = \infty$. Let $\Gal(L/K) = \Set{\sigma_1, \dots, \sigma_n}$.
@@ -353,8 +353,8 @@ And $\trace(T_\alpha) = -a_{n-1}, \det(T_\alpha) = (-1)^n a_0$.
     Since if we fix $\sigma_1$, for each $\sigma_i$, exists unique $j$ so that $\sigma_i \sigma_j = \sigma_1$.
     So the determinant has a $x_1^n$ term and is not zero.
     Then $f(\sigma_1, \dots, \sigma_n) \neq 0$ by lemma~\ref{lemma:automorphisms-are-alg-indep}.
-    Thus $\det\big([\sigma_{i}\sigma_{j}(\alpha)] \big) = f(\sigma_1, \dots, \sigma_n)(\alpha) \neq 0$.
+    Thus there exists $\alpha \in L$ s.t. $\det\big([\sigma_{i}\sigma_{j}(\alpha)] \big)
+    = f(\sigma_1, \dots, \sigma_n)(\alpha) \neq 0$.
     So by lemma~\ref{lemma:basis-iff-det-neq-0}, $\Set{ \sigma_i(\alpha) }$ is a basis.
-
   \end{proof}
 \end{theorem}
