--- a/fields/week5.tex
+++ b/fields/week5.tex
@@ -192,7 +192,10 @@ In this section, we assume that $\Char K \nmid n$ and $\zeta$ is a primitive $n$
     Now $\sigma(\alpha) = \zeta^{-1}\alpha \in K(\alpha)$, so $\sigma\big|_{K(\alpha)} \in \Gal(K(\alpha) / K)$.
     Also $\sigma^k(\alpha) = \zeta^{-k} \alpha \implies \ord(\sigma) = n$.
     Thus
-    \[ n = [L: K] \geq [K(\alpha): K] = \Gal(K(\alpha) / K) \geq n \implies L = K(\alpha) \]
+    \[
+      n = [L: K] \geq [K(\alpha): K] = \Gal(K(\alpha) / K) \geq n \implies L = K(\alpha)
+      \qedhere
+    \]
   \end{proof}
 \end{theorem}
 
