--- a/main.tex
+++ b/main.tex
@@ -144,6 +144,12 @@
 \renewcommand{\abstractname}{\LARGE Abstract}
 
 %%%%%%%%symbol and function settings%%%%%%%%%
+% adjust \exists and \forall spacing
+\let\existstemp\exists
+\let\foralltemp\forall
+\renewcommand*{\exists}{\existstemp\mkern4mu}
+\renewcommand*{\forall}{\foralltemp\mkern4mu}
+
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 \DeclarePairedDelimiter{\inpd}{\langle}{\rangle} % inner product
